add min version & jq wrapper

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	
-	<script src="/lib/jquery.min.js"></script>
-	<script src="/lib/jquery.modulecreator.js"></script>
-	<script src="/example/clear.js"></script>
+	<script src="./lib/jquery.min.js"></script>
+	<script src="./dist/jquery.modulecreator.min.js"></script>
+	<script src="./example/example.js"></script>
 	<script>
 		$(function() {
 			$('.example').moduleName({
