change constructor for es6

--- a/example/auto-suggest/auto-suggest.html
+++ b/example/auto-suggest/auto-suggest.html
@@ -5,7 +5,8 @@
 	<title>Document</title>
 	
 	<script src="../../lib/jquery.min.js"></script>
-	<script src="../../dist/jquery.modulecreator.min.js"></script>
+	<script src="../../src/jquery.modulecreator.js"></script>
+	<!-- <script src="../../dist/jquery.modulecreator.min.js"></script> -->
 	<script src="autoSuggest.js"></script>
 	<script>
 		$(function() {
