--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<script src="./example/example.js" defer></script>
 </head>
 <body>
-	<div class="example">// check in console</div>
+	<div class="example"></div>
 </body>
 </html>
