--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	
 	<script src="./lib/jquery.min.js" defer></script>
 	<script src="./dist/jquery.modulecreator.min.js" defer></script>
-	<script src="./example/example.js" defer></script>
+	<script src="./example/tests.js" defer></script>
 </head>
 <body>
-	<div class="example"></div>
+	<div id="example"></div>
 </body>
 </html>
