--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	
-	<script src="./lib/jquery.min.js" defer></script>
-	<script src="./dist/jquery.modulecreator.min.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.js" defer></script>
+	<script src="./dist/jquery.modulecreator.js" defer></script>
 	<script src="./example/tests.js" defer></script>
 </head>
 <body>
