added options in data attributes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="./example/tests.js" defer></script>
 </head>
 <body>
-	<div id="example"></div>
+	<div id="example" data-test-name='{"optionFromData": true}'></div>
+	<div id="example-child"></div>
 </body>
 </html>
