add single data options

--- a/example/auto-suggest/auto-suggest.html
+++ b/example/auto-suggest/auto-suggest.html
@@ -41,6 +41,13 @@
 				<span>Aliquid.</span>
 				<span>Cupiditate.</span>
 				<span>Quaerat.</span>
+				<span>Deserunt.</span>
+				<span>Sunt?</span>
+				<span>Aliquid?</span>
+				<span>Totam.</span>
+				<span>Aliquid.</span>
+				<span>Cupiditate.</span>
+				<span>Quaerat.</span>
 			</div>
 			<div class="select2">
 				<span>Assumenda?</span>
