fix single data bug

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="./example/tests.js" defer></script>
 </head>
 <body>
-	<div id="example" data-test-name='{"optionFromData": true}' data-test-name-dataoption1="true" data-test-name-dataoption2="true"></div>
+	<div id="example" data-test-name='{"optionFromData": true}' data-test-name-dataoption1="true" data-test-name-dataoption2="true" data-test-name-dataoption3></div>
 	<div id="example-child"></div>
 </body>
 </html>
